@@ -1,16 +1,10 @@
 package edu.hm.hafner.echarts.line;
 
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Stream;
-
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+
+import com.google.errorprone.annotations.CanIgnoreReturnValue;
 
 import edu.hm.hafner.echarts.Build;
 import edu.hm.hafner.echarts.BuildResult;
@@ -21,6 +15,14 @@ import edu.hm.hafner.echarts.TimeFacade;
 import edu.hm.hafner.util.VisibleForTesting;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Stream;
 
 import static java.util.Arrays.*;
 import static org.assertj.core.api.Assertions.*;
@@ -159,7 +161,7 @@ class SeriesBuilderTest {
         TimeFacade.reset();
         SeriesBuilder<Object> seriesBuilder = new TestSeriesBuilder(time);
 
-        LinesDataSet result = seriesBuilder.createDataSet(config, runs);
+        var result = seriesBuilder.createDataSet(config, runs);
 
         if (expected.isEmpty()) {
             assertThat(result.getDataSetIds()).isEmpty();
@@ -189,7 +191,7 @@ class SeriesBuilderTest {
     }
 
     private static BuildResult<?> createRun(final int buildNumber, final LocalDateTime buildTime) {
-        Build build = new Build(buildNumber, String.format("#%s", buildNumber),
+        var build = new Build(buildNumber, "#%s".formatted(buildNumber),
                 (int) buildTime.atZone(ZoneId.systemDefault()).toInstant().getEpochSecond());
 
         return new BuildResult<>(build, DAY);
@@ -242,6 +244,7 @@ class SeriesBuilderTest {
         @CheckForNull
         private ResultTime time;
 
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setConfig(final ChartModelConfiguration config) {
             this.config = config;
 
@@ -256,6 +259,7 @@ class SeriesBuilderTest {
          *
          * @return this
          */
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setTestName(final String name) {
             testName = name;
 
@@ -270,6 +274,7 @@ class SeriesBuilderTest {
          *
          * @return this
          */
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setTime(final ResultTime time) {
             this.time = time;
 
@@ -284,6 +289,7 @@ class SeriesBuilderTest {
          *
          * @return this
          */
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setRuns(final BuildResult<?>... runs) {
             this.runs = asList(runs);
 
@@ -299,6 +305,7 @@ class SeriesBuilderTest {
          * @return this
          */
         @SafeVarargs
+        @CanIgnoreReturnValue
         final TestArgumentsBuilder setExpected(final List<Double>... expectedSeries) {
             series = new ArrayList<>();
 
